try to fix figure spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1009,6 +1009,7 @@ pre code {
   font-weight: 300;
   font-size: 10x;
   color: #311e3e;
+  margin: 30px;
 }
 
 .science-figure .the-figure {
